--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ background-repeat:no-repeat;
        	<div class="col-md-8">
                     <h2 class="st">公告</h2>
                     <p>此页面仅是自己对个人网页的留念~~ (///w///)</p>
-                    <p>旧友只有少数联络了，毕竟我混圈子太边缘化了，性格又很不友好。仍然是要珍惜眼前人。谢谢各位。</p>
+                    <p>旧友只有少数联络了，毕竟我混圈子太边缘化了，性格又很不友好。仍然是要珍惜眼前人。谢谢各位，喵！</p>
                 </div>
 	<div class="clear">
 	<div class="f container">
 		<ol class="breadcrumb">
 		<li><b>友链列表：</b></li>
                                 <li><a href="http://coxxs.me/" target="_blank">COXXS</a></li>
-                                <li><a href="http://moe.lu/" target="_blank">SANZENIN KURA</a></li>
+                                <li><a href="http://kurachan.cn/" target="_blank">SANZENIN KURA</a></li>
                                 <li><a href="https://touko.moe/" target="_blank">TOUKO</a></li>
                                 <li><a href="http://im.dimpurr.com/" target="_blank">DIMPURR</a></li>
                                 <li><a href="http://blog.acg.vc/" target="_blank">KISEOPT</a></li>
