Change background image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <style type="text/css">
             *{padding:0;margin:0;border:0;}
             html,body{background-color:#FFFFFF;
-background-image:url(IMG_1002.PNG);
+background-image:url('耶.jpg');
 background-attachment:fixed;
 background-position:center;
 background-size:100%;
