--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ background-repeat:no-repeat;
 		<ol class="breadcrumb">
 		<li><b>友链列表：</b></li>
                                 <li><a href="http://coxxs.me/" target="_blank">COXXS</a></li>
+                                <li><a href="https://junebluez.com/" target="_blank">Clancey Lin</a></li>
                                 <li><a href="http://kurachan.cn/" target="_blank">SANZENIN KURA</a></li>
                                 <li><a href="https://touko.moe/" target="_blank">TOUKO</a></li>
                                 <li><a href="http://im.dimpurr.com/" target="_blank">DIMPURR</a></li>
